# y7ke

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  technical_task.md  wallets.txt
.github/workflows/: auto-tag.yml  ci.yml  release.yml
crates/y7ke-app/: Cargo.toml
crates/y7ke-app/examples/: dump_messages.rs
crates/y7ke-app/src/: app.rs  config.rs  event_loop.rs  handshake.rs  identity.rs  lib.rs  messaging.rs  rate_limit.rs  reconnect.rs  views.rs
crates/y7ke-app/src/app/: contacts.rs  messages.rs  settings.rs
crates/y7ke-app/tests/: v1_delete_propagation.rs  v1_e2e.rs  v1_offline_sync.rs  v1_privacy.rs  v1_restart_both.rs  v1_send_pending_out.rs  v1_stress.rs  v2_block_enforcement.rs  v2_settings.rs  v2_sync_filter.rs  v2_sync_reconcile.rs
crates/y7ke-core/: Cargo.toml
crates/y7ke-core/src/: diagnostics.rs  error.rs  event.rs  id.rs  lib.rs  netlog.rs  settings.rs  status.rs
crates/y7ke-core/src/crypto/: aead.rs  exchange.rs  kdf.rs  mod.rs  signing.rs
crates/y7ke-net/: Cargo.toml
crates/y7ke-net/examples/: live_relay_smoke.rs  nat_sim_node.rs  quic_migrate_node.rs
crates/y7ke-net/src/: behaviour.rs  dial_priority.rs  handle.rs  lib.rs  protocol.rs  swarm.rs
crates/y7ke-net/tests/: autonat_smoke.rs  four_node_relay.rs  ipv6_loopback.rs  quic_listen_smoke.rs  three_node_kad.rs  two_node.rs  v2_dcutr_smoke.rs
crates/y7ke-storage/: Cargo.toml
crates/y7ke-storage/migrations/: 0001_init.sql  0002_strip_session_key.sql  0003_dedup_outgoing_requests.sql  0004_settings.sql  0005_dialmode_singular.sql  0006_drop_p2p_dialmode.sql  0007_pending_deletes.sql
crates/y7ke-storage/src/: db.rs  dek.rs  field_crypto.rs  lib.rs
crates/y7ke-storage/src/dao/: contacts.rs  messages.rs  mod.rs  peer_state.rs  pending_deletes.rs  requests.rs  sessions.rs  settings.rs  sync_queue.rs  users.rs
crates/y7ke-storage/tests/: storage_e2e.rs
docs/: ARCHITECTURE.md  AUDIT.md  DECISIONS.md  DEMO.md  LIVE_SMOKE.md  PLAN.md  RELEASE_NOTES_V1.md  ROADMAP.md  TODO.md  V1_CHECKLIST.md  V2_GLOBAL_NETWORKING_PLAN.md
docs/screenshots/: README.md
scripts/hooks/: post-commit  pre-commit  prepare-commit-msg
scripts/nat-sim/: run-quic-migration.sh  run-symmetric.sh  run.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: App.svelte  app.css
ui/src/lib/: bridge.ts  diagnostics.ts  format.ts  log.ts  types-settings-stub.ts  types.ts
ui/src/lib/components/: Button.svelte  Card.svelte  ConnectionLabel.svelte  ContactRow.svelte  ContextMenu.svelte  IconButton.svelte  Input.svelte  KeyDisplay.svelte  MessageBubble.svelte  Modal.svelte  NavItem.svelte  StatusDot.svelte  Textarea.svelte  Titlebar.svelte  Toaster.svelte  Toggle.svelte  toast.svelte.ts
ui/src/lib/design/: reset.css  tokens.css
ui/src/lib/stores/: chat.svelte.ts  contacts.svelte.ts  events.svelte.ts  identity.svelte.ts  presence.svelte.ts  requests.svelte.ts  route.svelte.ts  settings.svelte.ts
ui/src/views/: AddContact.svelte  Chat.svelte  Connectivity.svelte  Donate.svelte  EmptyChat.svelte  IdentitySetup.svelte  MainShell.svelte  Requests.svelte  Settings.svelte  Sidebar.svelte
