[workspace]
resolver = "2"
members  = [
    "crates/y7ke-core",
    "crates/y7ke-storage",
    "crates/y7ke-net",
    "crates/y7ke-app",
    "src-tauri",
]

[workspace.package]
version      = "0.1.15"
edition      = "2021"
authors      = ["Y7KE Contributors"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/y7ke/y7ke"
rust-version = "1.80"

[workspace.dependencies]
# Internal crates — referenced by path.
y7ke-core    = { path = "crates/y7ke-core" }
y7ke-storage = { path = "crates/y7ke-storage" }
y7ke-net     = { path = "crates/y7ke-net" }
y7ke-app     = { path = "crates/y7ke-app" }

# Cross-cutting third-party crates with consistent versions.
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "fs", "process", "signal"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
bincode            = "2"
thiserror          = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures            = "0.3"
async-trait        = "0.1"
uuid               = { version = "1", features = ["v7", "serde"] }
blake3             = "1"
zeroize            = { version = "1", features = ["zeroize_derive"] }
bs58               = "0.5"
ts-rs              = "12"
serde_repr         = "0.1"

# Crypto primitives (used by y7ke-core).
ed25519-dalek    = "2"
x25519-dalek     = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf             = "0.12"
sha2             = "0.10"
rand             = "0.8"
rand_core        = "0.6"

# Networking (used by y7ke-net).
libp2p = "0.56"

# Storage (used by y7ke-storage).
sqlx        = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
directories = "5"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
panic         = "abort"
strip         = true

[profile.dev]
# Mild opt avoids painfully slow `cargo run` cycles on a project this size.
opt-level = 1

[profile.test]
opt-level = 1
