[package]
name         = "y7ke-app"
description  = "Composition root tying y7ke-core/storage/net together; exposes a Tauri-friendly API and a headless harness binary."
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
y7ke-core    = { workspace = true }
y7ke-storage = { workspace = true }
y7ke-net     = { workspace = true }

tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait        = { workspace = true }
blake3             = { workspace = true }
ts-rs              = { workspace = true }

# libp2p types appear in y7ke-net's public API (NetEvent carries
# `request_response::ResponseChannel` via `TakeOnce<_>`). We pull the same
# version with only the request-response feature so we can name those types.
libp2p = { workspace = true, features = ["request-response"] }

[dev-dependencies]
tokio    = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "time"] }
tempfile = "3"
